feat: funcionalidades frontend admin sidebar completo, ajustes services y controllers piloto y tripulante backend