@@ -1,6 +1,5 @@
 package com.tallerpiloto.piloto.service;
 
-
 import com.tallerpiloto.piloto.dto.VueloDTO;
 import com.tallerpiloto.piloto.dto.VueloResponseDTO;
 import com.tallerpiloto.piloto.model.*;
@@ -12,6 +11,7 @@ import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,21 +22,18 @@ public class VueloService {
     private final PilotoRepository pilotoRepository;
     private final TripulanteRepository tripulanteRepository;
     private final BaseRepository baseRepository;
-    public Vuelo crear(VueloDTO dto){
 
-        if(vueloRepository.findByNumVuelo(dto.getNumVuelo()).isPresent()){
-            throw  new RuntimeException("Ya existe un vuelo con ese numero");
+    public Vuelo crear(VueloDTO dto) {
+        if (vueloRepository.findByNumVuelo(dto.getNumVuelo()).isPresent()) {
+            throw new RuntimeException("Ya existe un vuelo con ese numero");
         }
+
         Base origen = baseRepository.findById(dto.getOrigenId())
                 .orElseThrow(() -> new RuntimeException("Base origen no encontrada"));
-
         Base destino = baseRepository.findById(dto.getDestinoId())
                 .orElseThrow(() -> new RuntimeException("Base destino no encontrada"));
-
-
         Avion avion = avionRepository.findById(dto.getAvionId())
                 .orElseThrow(() -> new RuntimeException("Avion no encontrado"));
-
         Piloto piloto = pilotoRepository.findById(dto.getPilotoId())
                 .orElseThrow(() -> new RuntimeException("Piloto no encontrado"));
 
@@ -45,9 +42,8 @@ public class VueloService {
             tripulacion = dto.getTripulacionIds().stream()
                     .map(id -> tripulanteRepository.findById(id)
                             .orElseThrow(() -> new RuntimeException("Tripulante no encontrado: " + id)))
-                    .toList();
+                    .collect(Collectors.toList());
         }
-
 
         Vuelo vuelo = Vuelo.builder()
                 .numVuelo(dto.getNumVuelo())
@@ -61,22 +57,24 @@ public class VueloService {
                 .tripulacion(tripulacion)
                 .build();
 
-
         avion.setEstado(EstadoAvion.EN_VUELO);
-
+        piloto.setEstado(EstadoPersonalAereo.EN_VUELO);
+        tripulacion.forEach(t -> t.setEstado(EstadoPersonalAereo.EN_VUELO));
 
         avionRepository.save(avion);
+        pilotoRepository.save(piloto);
+        tripulanteRepository.saveAll(tripulacion);
+
         return vueloRepository.save(vuelo);
-
-
-
     }
+
     public VueloResponseDTO buscarPorId(Long id) {
         return vueloRepository.findById(id)
                 .map(VueloResponseDTO::fromEntity)
                 .orElseThrow(() -> new RuntimeException("Vuelo no encontrado"));
     }
-    private Vuelo buscarPorEntidad(Long id){
+
+    private Vuelo buscarPorEntidad(Long id) {
         return vueloRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Vuelo no encontrado"));
     }
@@ -85,19 +83,29 @@ public class VueloService {
         return vueloRepository.findAllConDetalles()
                 .stream()
                 .map(VueloResponseDTO::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public VueloResponseDTO actualizar(Long id, VueloDTO dto) {
         Vuelo vuelo = buscarPorEntidad(id);
+
+        if (vuelo.getPiloto() != null) {
+            vuelo.getPiloto().setEstado(EstadoPersonalAereo.DISPONIBLE);
+            pilotoRepository.save(vuelo.getPiloto());
+        }
+        vuelo.getTripulacion().forEach(t -> {
+            t.setEstado(EstadoPersonalAereo.DISPONIBLE);
+            tripulanteRepository.save(t);
+        });
+
         vuelo.setNumVuelo(dto.getNumVuelo());
 
-        if(dto.getOrigenId() != null){
+        if (dto.getOrigenId() != null) {
             Base origen = baseRepository.findById(dto.getOrigenId())
                     .orElseThrow(() -> new RuntimeException("Base origen no encontrada"));
             vuelo.setOrigen(origen);
         }
-        if(dto.getDestinoId() != null){
+        if (dto.getDestinoId() != null) {
             Base destino = baseRepository.findById(dto.getDestinoId())
                     .orElseThrow(() -> new RuntimeException("Base destino no encontrada"));
             vuelo.setDestino(destino);
@@ -111,19 +119,27 @@ public class VueloService {
         }
         if (dto.getAvionId() != null) {
             Avion avion = avionRepository.findById(dto.getAvionId())
-                    .orElseThrow(() -> new RuntimeException("Avión no encontrado"));
+                    .orElseThrow(() -> new RuntimeException("Avion no encontrado"));
             vuelo.setAvion(avion);
+            avion.setEstado(EstadoAvion.EN_VUELO);
+            avionRepository.save(avion);
         }
         if (dto.getPilotoId() != null) {
             Piloto piloto = pilotoRepository.findById(dto.getPilotoId())
                     .orElseThrow(() -> new RuntimeException("Piloto no encontrado"));
             vuelo.setPiloto(piloto);
+            piloto.setEstado(EstadoPersonalAereo.EN_VUELO);
+            pilotoRepository.save(piloto);
         }
         if (dto.getTripulacionIds() != null) {
             List<Tripulante> tripulacion = dto.getTripulacionIds().stream()
                     .map(tripId -> tripulanteRepository.findById(tripId)
                             .orElseThrow(() -> new RuntimeException("Tripulante no encontrado")))
-                    .toList();
+                    .collect(Collectors.toList());
+            tripulacion.forEach(t -> {
+                t.setEstado(EstadoPersonalAereo.EN_VUELO);
+                tripulanteRepository.save(t);
+            });
             vuelo.setTripulacion(tripulacion);
         }
 
@@ -133,71 +149,80 @@ public class VueloService {
     public void cancelar(Long id) {
         Vuelo vuelo = buscarPorEntidad(id);
         vuelo.setEstado(EstadoVuelo.CANCELADO);
-        // liberar el avión
+
         if (vuelo.getAvion() != null) {
             vuelo.getAvion().setEstado(EstadoAvion.DISPONIBLE);
             avionRepository.save(vuelo.getAvion());
         }
+        if (vuelo.getPiloto() != null) {
+            vuelo.getPiloto().setEstado(EstadoPersonalAereo.DISPONIBLE);
+            pilotoRepository.save(vuelo.getPiloto());
+        }
+        vuelo.getTripulacion().forEach(t -> {
+            t.setEstado(EstadoPersonalAereo.DISPONIBLE);
+            tripulanteRepository.save(t);
+        });
+
         vueloRepository.save(vuelo);
     }
+
     public void retrasar(Long id, LocalDateTime nuevaFechaSalida) {
         Vuelo vuelo = buscarPorEntidad(id);
-
         if (vuelo.getEstado() != EstadoVuelo.PROGRAMADO) {
             throw new RuntimeException("Solo se pueden retrasar vuelos programados");
         }
-
         vuelo.setEstado(EstadoVuelo.RETRASADO);
         vuelo.setFechaHoraSalida(nuevaFechaSalida);
         vueloRepository.save(vuelo);
     }
 
-
     public List<VueloResponseDTO> listarPorPiloto(Long pilotoId) {
         return vueloRepository.findByPilotoId(pilotoId)
                 .stream()
                 .map(VueloResponseDTO::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<VueloResponseDTO> listarPorTripulante(Long tripulanteId) {
         return vueloRepository.findByTripulanteId(tripulanteId)
                 .stream()
                 .map(VueloResponseDTO::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<VueloResponseDTO> listarPorEstado(EstadoVuelo estado) {
         return vueloRepository.findByEstado(estado)
                 .stream()
                 .map(VueloResponseDTO::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
-
-
 
     public Vuelo aterrizar(Long id) {
         Vuelo vuelo = buscarPorEntidad(id);
         vuelo.setEstado(EstadoVuelo.ATERRIZADO);
         vuelo.setFechaHoraLlegada(LocalDateTime.now());
 
-        // calcular horas de vuelo
         if (vuelo.getFechaHoraSalida() != null) {
             double horasVuelo = Duration.between(
                     vuelo.getFechaHoraSalida(),
                     LocalDateTime.now()
             ).toMinutes() / 60.0;
 
-            // sumar horas al piloto
             Piloto piloto = vuelo.getPiloto();
             piloto.setHorasDeVuelo(piloto.getHorasDeVuelo() + horasVuelo);
+            piloto.setEstado(EstadoPersonalAereo.DISPONIBLE);
             pilotoRepository.save(piloto);
 
-            // sumar horas al avión
             Avion avion = vuelo.getAvion();
             avion.setHorasDeVuelo(avion.getHorasDeVuelo() + horasVuelo);
             avion.setEstado(EstadoAvion.DISPONIBLE);
             avionRepository.save(avion);
+
+            // ✅ liberar tripulantes
+            vuelo.getTripulacion().forEach(t -> {
+                t.setEstado(EstadoPersonalAereo.DISPONIBLE);
+                tripulanteRepository.save(t);
+            });
         }
 
         return vueloRepository.save(vuelo);
